--- a/src/Front/View/LoginView.fxml
+++ b/src/Front/View/LoginView.fxml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
@@ -11,8 +13,10 @@
          <font>
             <Font size="26.0" />
          </font></Label>
-      <Label layoutX="108.0" layoutY="192.0" text="Label" />
-      <Label layoutX="218.0" layoutY="201.0" text="Senha" AnchorPane.leftAnchor="227.0" AnchorPane.rightAnchor="336.0" AnchorPane.topAnchor="201.0" />
-      <PasswordField layoutX="226.0" layoutY="223.0" />
+      <Label layoutX="225.0" layoutY="156.0" text="Usuário" AnchorPane.leftAnchor="227.0" AnchorPane.rightAnchor="332.0" AnchorPane.topAnchor="156.0" />
+      <Label layoutX="227.0" layoutY="206.0" text="Senha" AnchorPane.leftAnchor="227.0" AnchorPane.rightAnchor="336.0" AnchorPane.topAnchor="206.0" />
+      <PasswordField fx:id="password" layoutX="226.0" layoutY="223.0" AnchorPane.leftAnchor="225.0" AnchorPane.rightAnchor="225.0" AnchorPane.topAnchor="223.0" />
+      <TextField fx:id="user" layoutX="226.0" layoutY="173.0" AnchorPane.leftAnchor="225.0" AnchorPane.rightAnchor="225.0" AnchorPane.topAnchor="173.0" />
+      <Button fx:id="entrar" onAction="#entrarAction" layoutX="276.0" layoutY="265.0" mnemonicParsing="false" text="Entrar" AnchorPane.leftAnchor="276.0" AnchorPane.rightAnchor="276.0" AnchorPane.topAnchor="265.0" />
    </children>
 </AnchorPane>
